implemented parameters for zodiac to specify handling of library matches. [skip ci]